Name change and added architecture diagrams

--- a/templates/mail_templates/newsletter.mjml
+++ b/templates/mail_templates/newsletter.mjml
@@ -4,7 +4,7 @@
 
 <mjml>
   <mj-head>
-    <mj-preview>LE CARMAGNOLE - Newsletter</mj-preview>
+    <mj-preview>LA CARMAGNOLE - Newsletter</mj-preview>
     <mj-font name="Merriweather" href="https://fonts.googleapis.com/css?family=Merriweather:400,700,900" />
     <mj-font name="Roboto" href="https://fonts.googleapis.com/css?family=Roboto:400,700"></mj-font>
     <mj-font name="Lato" href="https://fonts.googleapis.com/css?family=Lato"></mj-font>
